# cortex

./: .gitignore  AGENTS.md  README.md  antora-playbook.yml  package-lock.json  package.json
docker/: appimage.Dockerfile
docs/: antora.yml
docs/modules/developer/: nav.adoc
docs/modules/developer/pages/: adr-policy.adoc  index.adoc  setup.adoc  terminal-architecture.adoc
docs/modules/user/: nav.adoc
docs/modules/user/pages/: embedded-terminal.adoc  index.adoc
docs/supplemental-ui/partials/: header-content.hbs
openspec/changes/archive/2026-05-31-bootstrap-tauri-ghostty-terminal/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-08-local-layout-storage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-08-project-workspaces/: design.md  proposal.md  tasks.md
openspec/changes/container-images-and-linux-bundle/: design.md  tasks.md
openspec/changes/container-runtime/: tasks.md
openspec/changes/run-microvm-sandboxes/: tasks.md
openspec/specs/container-exec/: spec.md
openspec/specs/container-images/: spec.md
openspec/specs/containers/: spec.md
openspec/specs/desktop-app-shell/: spec.md
openspec/specs/developer-documentation/: spec.md
openspec/specs/embedded-terminal/: spec.md
openspec/specs/linux-app-bundle/: spec.md
openspec/specs/microvm-sandboxes/: spec.md
openspec/specs/project-management/: spec.md
scripts/: build-agent.sh  build-appimage-docker.sh  build-appimage.sh  build-libghostty-wasm.mjs  codesign-dev.sh  dev.sh  verify-libghostty-wasm.mjs
src/: App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/agent-proto/: Cargo.toml
src-tauri/agent-proto/src/: lib.rs
src-tauri/capabilities/: default.json
src-tauri/cortex-init/: Cargo.toml
src-tauri/cortex-init/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: container_runtime.rs  containers.rs  images.rs  lib.rs  main.rs  project.rs  sandbox.rs  settings.rs  terminal.rs
src/container/: containerApi.ts
src/project/: ProjectPicker.tsx  ProjectView.tsx  icons.tsx  layout.ts  projectApi.ts
src/sandbox/: sandboxApi.ts
src/terminal/: TerminalPane.tsx  TerminalViewport.tsx  ghosttyVt.ts  sessionTransport.ts  terminalCanvas.ts  terminalSettings.ts
(+29 files in other folders)
