[workspace]
members = ["agent-proto", "cortex-init"]
resolver = "2"

[package]
name = "cortex"
version = "0.1.0"
description = "Cortex desktop app"
authors = ["Huginum developers", "Tobias Jakobsson"]
edition = "2024"
license = "Apache-2.0"

[lib]
name = "cortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
flate2 = "1.1.9"
oci-client = "0.17.0"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tar = "0.4.46"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
